Use gvim as planner.

--- a/.dotbot.conf.yaml
+++ b/.dotbot.conf.yaml
@@ -9,6 +9,7 @@
     ~/.dircolors: dircolors
     ~/.gitconfig: gitconfig
     ~/.git-prompt.sh: git-prompt.sh
+    ~/.gvimrc: gvimrc
     ~/.ipython: ipython
     ~/.local/bin/imgcat: imgcat
     ~/.vim: vim
