feat(tmux): Add tmux config and vim-tmux-navigator integration
Add tmux configuration with TPM, vim-tmux-navigator, and OneDark theme.
Integrate seamless pane navigation between Neovim and tmux via Ctrl+hjkl.

--- a/.dotbot.conf.yaml
+++ b/.dotbot.conf.yaml
@@ -12,6 +12,7 @@
     ~/.git-prompt.sh: git-prompt.sh
     ~/.ipython: ipython
     ~/.local/bin/imgcat: imgcat
+    ~/.tmux.conf: tmux.conf
     ~/.vim: vim
 
 - shell:
