feat(ghostty): Add Ghostty terminal configuration
Add initial Ghostty config with Monokai Pro theme, Geist Mono font,
and dotbot symlink entry.

--- a/.dotbot.conf.yaml
+++ b/.dotbot.conf.yaml
@@ -5,6 +5,7 @@
     ~/.bashrc: bashrc
     ~/.bashrc_linux: bashrc_linux
     ~/.bashrc_mac: bashrc_mac
+    ~/.config/ghostty: ghostty
     ~/.config/nvim: nvim
     ~/.config/wezterm: wezterm
     ~/.dircolors: dircolors
