--- a/ghostty/config
+++ b/ghostty/config
@@ -1,3 +1,4 @@
+# General
 title = " "
 window-padding-color = background
 theme = "Monokai Pro"
@@ -6,3 +7,37 @@ font-size = 16
 font-feature = -liga
 cursor-style-blink=false
 bell-features = no-title
+copy-on-select = clipboard
+mouse-hide-while-typing = true
+mouse-scroll-multiplier = 2
+confirm-close-surface = false
+
+# Keybindings
+keybind = ctrl+shift+n=new_window
+keybind = ctrl+t>t=new_tab
+keybind = ctrl+t>p=previous_tab
+keybind = ctrl+t>n=next_tab
+keybind = ctrl+t>comma=move_tab:-1
+keybind = ctrl+t>period=move_tab:1
+keybind = ctrl+t>1=goto_tab:1
+keybind = ctrl+t>2=goto_tab:2
+keybind = ctrl+t>3=goto_tab:3
+keybind = ctrl+t>4=goto_tab:4
+keybind = ctrl+t>5=goto_tab:5
+keybind = ctrl+t>6=goto_tab:6
+keybind = ctrl+t>7=goto_tab:7
+keybind = ctrl+t>8=goto_tab:8
+keybind = ctrl+t>9=goto_tab:9
+keybind = ctrl+t>z=toggle_split_zoom
+keybind = ctrl+t>e=equalize_splits
+keybind = ctrl+t>s=new_split:auto
+keybind = ctrl+t>v=new_split:right
+keybind = ctrl+t>o=new_split:up
+keybind = ctrl+t>l=goto_split:right
+keybind = ctrl+t>h=goto_split:left
+keybind = ctrl+t>k=goto_split:up
+keybind = ctrl+t>j=goto_split:down
+keybind = ctrl+t>q=close_surface
+keybind = ctrl+shift+t>q=close_tab
+keybind = ctrl+t>c=close_window
+keybind = ctrl+t>f=write_scrollback_file:paste
