--- a/tmux.conf
+++ b/tmux.conf
@@ -14,6 +14,7 @@ set -g base-index 1
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
+set-option -g status-position top
 set -g status-keys vi
 set -g history-limit 10000
 
